install/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-os
  namespace: flow-os
  labels:
    app: flow-os
    component: api
spec:
  selector:
    app: flow-os
    component: api
  ports:
    - name:       http
      port:       80
      targetPort: 5001
      protocol:   TCP
    - name:       https
      port:       443
      targetPort: 5001
      protocol:   TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: flow-os-metrics
  namespace: flow-os
  labels:
    app: flow-os
    component: metrics
spec:
  selector:
    app: flow-os
    component: api
  ports:
    - name:       metrics
      port:       9090
      targetPort: 5001
  type: ClusterIP
